[gd_scene load_steps=7 format=2]

[ext_resource path="res://Icons/Temp_Train.jpg" type="Texture" id=1]
[ext_resource path="res://Icons/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/Scripts/Main_Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform int amount = 128;


void fragment()
{
	vec2 grid_uv = round(UV * float(amount)) / float(amount);
	
	vec4 text = texture(TEXTURE, grid_uv);
	
	COLOR = text;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 128

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Base Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Base Container"]
margin_right = 250.0
margin_bottom = 600.0
rect_min_size = Vector2( 250, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="Base Container/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="HBoxContainer" type="HBoxContainer" parent="Base Container/Panel/MarginContainer2"]
margin_right = 150.0
margin_bottom = 500.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Base Container/Panel/MarginContainer2/HBoxContainer"]
margin_right = 150.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 9
alignment = 2

[node name="Start" type="Button" parent="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 362.0
margin_right = 150.0
margin_bottom = 402.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
custom_constants/hseparation = 12
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Options" type="Button" parent="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 411.0
margin_right = 150.0
margin_bottom = 451.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
custom_constants/hseparation = 12
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Quit" type="Button" parent="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 460.0
margin_right = 150.0
margin_bottom = 500.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
custom_constants/hseparation = 12
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Image_Train" type="TextureRect" parent="Base Container"]
material = SubResource( 2 )
margin_left = 254.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="Useless Margin Container" type="MarginContainer" parent="Base Container/Image_Train"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="pressed" from="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Base Container/Panel/MarginContainer2/HBoxContainer/VBoxContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
